test_suite/fixtures/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jaskaran-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "jaskaran-playground"
    cloud-platform.justice.gov.uk/application: "get familiar with cloud platform"
    cloud-platform.justice.gov.uk/owner: "webops: jaskaran.sarkaria@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/jaskaransarkaria/programming-timer-server"
    cloud-platform.justice.gov.uk/team-name: "webops"
    cloud-platform.justice.gov.uk/review-after: "2023-04-19"
