test_suite/fixtures/example_blocked.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    external-dns.alpha.kubernetes.io/set-identifier: ext-dns-ing-2-starter-pack-1-green
  name: ext-dns-ing-2
  namespace: starter-pack-1
spec:
  ingressClassName: default
  rules:
  - host: ext-dns-test-2.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - backend:
          service:
            name: ssi-svc
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
